Unhid ores, fixed grid description overflow

--- a/src/components/Descriptor/Descriptor.module.css
+++ b/src/components/Descriptor/Descriptor.module.css
@@ -8,6 +8,8 @@
     border: 1px solid #5C757C;
     font-family: 'Oxanium';
     width: 360px;
+    max-height: 80%;
+    overflow: auto;
 }
 
 .title {
